Fixed scrollbar issue and minor related changes

--- a/public/templates/base.css
+++ b/public/templates/base.css
@@ -24,6 +24,8 @@ div {
 	width: 800px;	
   overflow-wrap: break-word;
   text-align: justify;
+  overflow-y: auto;
+  overflow-x: auto;
 }
 
 h1 {
@@ -82,8 +84,8 @@ img {
 }
 
 ::-webkit-scrollbar {
-  width: 12px;
-  height: 440px;
+  height: 12px;
+  width: 12px;  
 }
 ::-webkit-scrollbar-track {
   background: transparent; 
@@ -96,4 +98,10 @@ img {
   background: rgb(194, 194, 194); 
 }
 
+::-webkit-scrollbar-corner {
+  background: transparent;
+}
 
+/* code {
+  
+} */
